2007-10-15 David Anderson <davea42@earthlink.net>
      * dwarf_alloc.c: The code supporting the special build
        flag DWARF_SIMPLE_MALLOC
        was broken and could coredump libdwarf
        (which did not affect normal use of libdwarf).
      * dwarf_opaque.h: Remove the field de_simple_malloc_current
        as it is no longer used.

2007-09-04 David Anderson <davea42@earthlink.net>
      * pro_forms.c: Add commentary relating to the
        recent DWARF4 DW_AT_high_pc change.
        Correct FSF address.
      * libdwarf2p.1.mm: Document dwarf_add_AT_dataref()
        and dwarf_add_AT_ref_address().
      * libdwarf2p.1.pdf: Regenerate.
      * dwarf.h: Update FSF address.
      * dwarf_opaque.h: Add DWARF4 entry (version stamp).
        Update FSF address.
      * dwarf_die_deliv.c: Add check for .debug_info version 4 
        (version stamp). Update FSF address.
      * libdwarf.h pro_macinfo.h pro_line.h dwarf_incl.h
        pro_alloc.h pro_section.h libdwarfdefs.h pro_util.h
        dwarf_vars.h dwarf_funcs.h pro_error.h dwarf_alloc.h pro_arange.h
        dwarf_arange.h pro_die.h dwarf_global.h pro_expr.h
        pro_reloc_stream.h pro_incl.h pro_encode_nm.h
        dwarf_line.h pro_frame.h pro_opaque.h dwarf_error.h
        dwarf_base_types.h dwarf_abbrev.h pro_types.h pro_reloc_symbolic.h
        dwarf_weaks.h dwarf_util.h dwarf_loc.h malloc_check.h
        dwarf_die_deliv.h acconfig.h dwarf_frame.h dwarf_macro.h
        pro_reloc.h dwarf_types.h
        pro_funcs.c Makefile.in pro_forms.c pro_line.c
        dwarf_print_lines.c pro_alloc.c pro_init.c dwarf_addr_finder.c
        pro_section.c dwarf_form.c dwarf_query.c dwarf_vars.c
        dwarf_pubtypes.c dwarf_frame3.c dwarf_funcs.c pro_error.c
        pro_arange.c dwarf_alloc.c dwarf_arange.c pro_die.c
        dwarf_sort_line.c dwarf_global.c dwarf_init_finish.c pro_weaks.c
        pro_pubnames.c pro_expr.c pro_reloc_stream.c pro_finish.c